--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="th">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chavanlak Tangsopha - Software Tester Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        .hero { background: #2c3e50; color: white; padding: 100px 0; }
+        .skill-card { border: none; transition: 0.3s; }
+        .skill-card:hover { transform: translateY(-5.5px); }
+    </style>
+</head>
+<body>
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">CT Portfolio</a>
+        </div>
+    </nav>
+
+    <header class="hero text-center">
+        <div class="container">
+            <h1>นาย ชวัลลักษณ์ แตงโสภา</h1>
+            <p class="lead">Software Tester / QA Engineering Specialist</p>
+            <hr class="my-4 bg-light">
+            <p>รับทดสอบโปรแกรม ตรวจสอบ Bug และจัดทำรายงานผลการทดสอบ (Test Report)</p>
+        </div>
+    </header>
+
+    <section class="container my-5">
+        <h2 class="text-center mb-4">บริการและทักษะ (Services)</h2>
+        <div class="row g-4 text-center">
+            <div class="col-md-4">
+                <div class="card skill-card shadow-sm p-4">
+                    <h3>Manual Testing</h3>
+                    <p>เขียน Test Case, Test Scenario และหาจุดบกพร่องตาม User Journey</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card skill-card shadow-sm p-4">
+                    <h3>Automated Testing</h3>
+                    <p>พัฒนาสคริปต์ทดสอบด้วย Robot Framework หรือ Selenium</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card skill-card shadow-sm p-4">
+                    <h3>Reporting</h3>
+                    <p>สรุปผลการทดสอบ Bug Report และวิเคราะห์จุดเสี่ยงของระบบ</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-light py-5">
+        <div class="container text-center">
+            <h2>สนใจร่วมงานหรือจ้างทดสอบระบบ</h2>
+            <p>ติดต่อ: <strong>ชวัลลักษณ์ แตงโสภา</strong></p>
+            <a href="mailto:your-email@example.com" class="btn btn-primary btn-lg">ส่งอีเมลติดต่อ</a>
+        </div>
+    </section>
+
+    <footer class="text-center py-4 border-top">
+        <p>© 2025 Chawanlak Taengsopha - All Rights Reserved</p>
+    </footer>
+
+</body>
+</html>
