--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header class="hero text-center">
         <div class="container">
-            <h1>นาย ชวัลลักษณ์ แตงโสภา</h1>
+            <h1>รับทดสอบโปรแกรม</h1>
             <p class="lead">Software Tester / QA Engineering Specialist</p>
             <hr class="my-4 bg-light">
             <p>รับทดสอบโปรแกรม ตรวจสอบ Bug และจัดทำรายงานผลการทดสอบ (Test Report)</p>
@@ -62,7 +62,7 @@
     </section>
 
     <footer class="text-center py-4 border-top">
-        <p>© 2025 Chawanlak Taengsopha - All Rights Reserved</p>
+        <p>© 2025 Chavanlak Taengsopha - All Rights Reserved</p>
     </footer>
 
 </body>
