--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <section class="bg-light py-5">
         <div class="container text-center">
             <h2>สนใจร่วมงานหรือจ้างทดสอบระบบ</h2>
-            <p>ติดต่อ: <strong>ชวัลลักษณ์ แตงโสภา</strong></p>
+            <p>ติดต่อ: <strong>นาย ชวัลลักษณ์ แตงโสภา</strong></p>
             <a href="mailto:your-email@example.com" class="btn btn-primary btn-lg">ส่งอีเมลติดต่อ</a>
         </div>
     </section>
 
     <footer class="text-center py-4 border-top">
-        <p>© 2025 Chavanlak Taengsopha - All Rights Reserved</p>
+        <p>© 2025 Chavanlak Tangsopha - All Rights Reserved</p>
     </footer>
 
 </body>
